+ FAQ Page added

--- a/templates/base.html
+++ b/templates/base.html
@@ -66,6 +66,7 @@
                         {% else %}
                         <a class="dropdown-link" href="{{ url_for('admin_dashboard') }}">View Dashboard</a>
                         {% endif %}
+                        <a class="dropdown-link" href="{{ url_for('FAQ') }}">FAQs</a>
                     </div>
                 </div>
             </li>
