--- a/templates/base.html
+++ b/templates/base.html
@@ -24,9 +24,9 @@
 <body>
 <nav class="navbar navbar-expand-lg row" style="background:#E7F3FC;">
     {% if user_account %}
-        <a href="/home"> <img class="navbar-brand responsive" src="../../../static/cover.png"/></a>
+    <a href="/home"> <img class="navbar-brand responsive" src="../../../static/cover.png"/></a>
     {% else %}
-        <a href="/home"> <img class="navbar-brand responsive" src="../../../static/cover.png"/></a>
+    <a href="/home"> <img class="navbar-brand responsive" src="../../../static/cover.png"/></a>
     {% endif %}
     <button class="hamburger hamburger--collapse hamburger-custom navbar-toggler" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -39,14 +39,23 @@
 
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent" style="text-align: center;">
-        <ul class="navbar-nav mr-auto"></ul>
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="navbar-links" href="/home">Home</a>
+            </li>
+        </ul>
+                <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="navbar-links" href="/FAQ">FAQs</a>
+            </li>
+        </ul>
         <ul class="navbar-nav" style="margin-right:30px;">
             <div class="search-box">
                 <form method="GET" action="{{ url_for('home') }}">
                     <input class="mr-sm-2 input-search" type="text" name="search" placeholder="Search"
                            aria-label="Search"
                            style="text-align:middle">
-                        <button class="btn btn-navbar swoy-btn my-2 my-sm-0" type="submit" style="border-radius:50%;"><i
+                    <button class="btn btn-navbar swoy-btn my-2 my-sm-0" type="submit" style="border-radius:50%;"><i
                             class="fas fa-search"></i></button>
                 </form>
             </div>
@@ -122,6 +131,8 @@
     hamburger.classList.toggle("is-active");
     // Do something else, like open/close menu
   });
+
+
 </script>
 <script type="text/javascript" src="static\main.js"></script>
 </body>
